fix responsive bug on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1089,6 +1089,11 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
+
+  .intro {
+    padding: 40px 50px 150px 50px;
+  }
+
   .gallery {
     column-count: 2;
   }
